--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
   <version>1.0-SNAPSHOT</version>
   <modules>
     <module>dw_flume-interceptor</module>
+    <module>hivefunction</module>
   </modules>
 
   <name>dw2020</name>
